[gd_scene load_steps=69 format=2]

[ext_resource path="res://Assets/Knight/Idle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Knight/Walk.png" type="Texture" id=3]
[ext_resource path="res://Assets/Knight/Jump.png" type="Texture" id=4]
[ext_resource path="res://Assets/Knight/rest.png" type="Texture" id=5]
[ext_resource path="res://Assets/Knight/Capa 10.png" type="Texture" id=6]
[ext_resource path="res://Assets/Knight/Capa 11.png" type="Texture" id=7]
[ext_resource path="res://Sounds/path of exile.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/Knight/Dead.png" type="Texture" id=9]
[ext_resource path="res://Assets/Knight/Capa 12.png" type="Texture" id=10]
[ext_resource path="res://Sounds/FinalBossMusic.ogg" type="AudioStream" id=11]
[ext_resource path="res://Assets/Knight/Capa 14.png" type="Texture" id=12]
[ext_resource path="res://Sounds/attack_sound.ogg" type="AudioStream" id=13]
[ext_resource path="res://Sounds/hah_jump2.ogg" type="AudioStream" id=14]
[ext_resource path="res://Sounds/huh_jump1.ogg" type="AudioStream" id=15]
[ext_resource path="res://Sounds/dragonslayer desert.ogg" type="AudioStream" id=16]
[ext_resource path="res://Sounds/Cursed Abyssal Reef.ogg" type="AudioStream" id=17]
[ext_resource path="res://Sounds/rest.ogg" type="AudioStream" id=18]
[ext_resource path="res://Sounds/playerHurt.ogg" type="AudioStream" id=19]
[ext_resource path="res://Sounds/Frostveil Shrine.ogg" type="AudioStream" id=20]
[ext_resource path="res://Sounds/crimson_Abyss_Forge.ogg" type="AudioStream" id=21]
[ext_resource path="res://Assets/Knight/Hurt.png" type="Texture" id=23]
[ext_resource path="res://Assets/Knight/dash-sheet.png" type="Texture" id=24]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 24.5 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 24 )
region = Rect2( 2, 0, 177, 66 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 24 )
region = Rect2( 179, 0, 177, 66 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 24 )
region = Rect2( 1595, 0, 177, 66 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 24 )
region = Rect2( 1418, 0, 177, 66 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 24 )
region = Rect2( 1241, 0, 177, 66 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 24 )
region = Rect2( 1064, 0, 177, 66 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 24 )
region = Rect2( 887, 0, 177, 66 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 24 )
region = Rect2( 710, 0, 177, 66 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 24 )
region = Rect2( 356, 0, 177, 66 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 24 )
region = Rect2( 533, 0, 177, 66 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 80, 86 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 9 )
region = Rect2( 80, 0, 80, 86 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 9 )
region = Rect2( 160, 0, 80, 86 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 9 )
region = Rect2( 320, 0, 80, 86 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 9 )
region = Rect2( 400, 0, 80, 86 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 23 )
region = Rect2( 71, 0, 70, 86 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 23 )
region = Rect2( 1, 0, 70, 86 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 43, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 43, 0, 43, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 86, 0, 43, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 129, 0, 43, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 69, 65 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 69, 0, 69, 65 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 138, 0, 69, 65 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 207, 0, 69, 65 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 276, 0, 69, 65 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 345, 0, 69, 65 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 47, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 47, 0, 47, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 94, 0, 47, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 188, 0, 47, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 141, 0, 47, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 336, 0, 48, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 7 ) ],
"loop": false,
"name": "attack",
"speed": 48.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 6 ) ],
"loop": true,
"name": "attack 1",
"speed": 48.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "dash",
"speed": 40.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 31 ), SubResource( 32 ), SubResource( 32 ) ],
"loop": false,
"name": "dead",
"speed": 3.0
}, {
"frames": [ SubResource( 35 ), SubResource( 34 ), SubResource( 35 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": false,
"name": "hurt",
"speed": 9.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 3.5
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 17 ), SubResource( 17 ), SubResource( 17 ), SubResource( 18 ), SubResource( 18 ), SubResource( 19 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "jump",
"speed": 11.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 24 ), SubResource( 24 ), SubResource( 23 ), SubResource( 22 ), SubResource( 25 ), SubResource( 26 ), SubResource( 26 ), SubResource( 26 ), SubResource( 26 ), SubResource( 25 ), SubResource( 22 ) ],
"loop": true,
"name": "rest",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 16, 33 )

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 32.625, 38 )

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 18, 26 )

[node name="KinematicBody2D" type="KinematicBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -3, 2 )
shape = SubResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 2 )
scale = Vector2( 1, 0.95 )
frames = SubResource( 5 )
animation = "idle"

[node name="TimerRest" type="Timer" parent="."]

[node name="TimerAtack" type="Timer" parent="."]

[node name="cooldown" type="Timer" parent="."]

[node name="rest" type="Area2D" parent="."]
collision_layer = 10
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="rest"]
position = Vector2( -2, 1 )
shape = SubResource( 21 )

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = -10.857

[node name="attack_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -18.0

[node name="jump1_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -9.0

[node name="jump2_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -6.0

[node name="attack_sound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -17.126

[node name="rest_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -14.0

[node name="dragonslayer_desert_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -29.0
pitch_scale = 0.95

[node name="path_of_exile_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
pitch_scale = 1.05

[node name="frostveil_Shrine_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -12.0

[node name="crimson_Abyss_Forge_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -21.0

[node name="Cursed_Abyssal_Reef_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -14.0
pitch_scale = 0.67

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 50.375, -5 )
shape = SubResource( 33 )
disabled = true

[node name="deadAnim" type="Timer" parent="."]

[node name="deadeffect" type="Timer" parent="."]

[node name="deadtp" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 6 )
shape = SubResource( 36 )

[node name="FinalBos" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -30.588

[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="rest" to="." method="_on_rest_body_entered"]
[connection signal="body_exited" from="rest" to="." method="_on_rest_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
