[gd_scene load_steps=95 format=2]

[ext_resource path="res://Assets/Knight/Idle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Knight/Walk.png" type="Texture" id=3]
[ext_resource path="res://Assets/Knight/Jump.png" type="Texture" id=4]
[ext_resource path="res://Assets/Knight/rest.png" type="Texture" id=5]
[ext_resource path="res://Assets/Knight/Capa 10.png" type="Texture" id=6]
[ext_resource path="res://Assets/Knight/Capa 11.png" type="Texture" id=7]
[ext_resource path="res://Sounds/path of exile.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/Knight/Dead.png" type="Texture" id=9]
[ext_resource path="res://Assets/Knight/Capa 12.png" type="Texture" id=10]
[ext_resource path="res://Sounds/FinalBossMusic.ogg" type="AudioStream" id=11]
[ext_resource path="res://Assets/Knight/Capa 14.png" type="Texture" id=12]
[ext_resource path="res://Sounds/attack_sound.ogg" type="AudioStream" id=13]
[ext_resource path="res://Sounds/hah_jump2.ogg" type="AudioStream" id=14]
[ext_resource path="res://Sounds/huh_jump1.ogg" type="AudioStream" id=15]
[ext_resource path="res://Sounds/dragonslayer desert.ogg" type="AudioStream" id=16]
[ext_resource path="res://Sounds/Cursed Abyssal Reef.ogg" type="AudioStream" id=17]
[ext_resource path="res://Sounds/rest.ogg" type="AudioStream" id=18]
[ext_resource path="res://Sounds/playerHurt.ogg" type="AudioStream" id=19]
[ext_resource path="res://Sounds/Frostveil Shrine.ogg" type="AudioStream" id=20]
[ext_resource path="res://Sounds/crimson_Abyss_Forge.ogg" type="AudioStream" id=21]
[ext_resource path="res://Assets/Knight/croucht.png" type="Texture" id=22]
[ext_resource path="res://Assets/Knight/Hurt.png" type="Texture" id=23]
[ext_resource path="res://Assets/Knight/dash-sheet.png" type="Texture" id=24]
[ext_resource path="res://Assets/FX/hitP.png" type="Texture" id=25]
[ext_resource path="res://Sounds/heartSound.ogg" type="AudioStream" id=26]
[ext_resource path="res://Assets/Knight/Capa 13.png" type="Texture" id=27]
[ext_resource path="res://Assets/Knight/Capa 6.png" type="Texture" id=28]
[ext_resource path="res://Assets/Knight/attackup.png" type="Texture" id=29]
[ext_resource path="res://Assets/Knight/attackdown.png" type="Texture" id=30]
[ext_resource path="res://Sounds/dash_sfx.ogg" type="AudioStream" id=31]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 24.5 )

[sub_resource type="Shader" id=64]
code = "shader_type canvas_item;
uniform float opacity;
uniform float r;
uniform float g;
uniform float b;
uniform float mix_color;

void fragment() {
    vec4 texture_color = texture(TEXTURE, UV);
    if (texture_color.a != 0.0)
        COLOR = vec4(mix(texture_color.rgb, vec3(r, g, b), mix_color), opacity);
}

void light() {
    vec3 light_vec3 = normalize(vec3(LIGHT_VEC, 0.0)); // Convertir LIGHT_VEC a vec3
    float cNdotL = max(0.0, dot(NORMAL, light_vec3)); 
    LIGHT = vec4(LIGHT_COLOR.rgb * COLOR.rgb * LIGHT_COLOR.a * cNdotL, LIGHT_COLOR.a);
}
"

[sub_resource type="ShaderMaterial" id=65]
shader = SubResource( 64 )
shader_param/opacity = 1.0
shader_param/r = null
shader_param/g = 0.0
shader_param/b = 200.0
shader_param/mix_color = 0.5

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 28 )
region = Rect2( 0, 0, 144, 88 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 27 )
region = Rect2( 0, 0, 144, 88 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 30 )
region = Rect2( 0, 0, 111, 162 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 30 )
region = Rect2( 333, 0, 111, 162 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 30 )
region = Rect2( 222, 0, 111, 162 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 30 )
region = Rect2( 111, 0, 111, 162 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 29 )
region = Rect2( 0, 0, 83, 125 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 29 )
region = Rect2( 83, 0, 83, 125 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 29 )
region = Rect2( 166, 0, 83, 125 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 29 )
region = Rect2( 249, 0, 83, 125 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 24 )
region = Rect2( 0, 0, 114, 66 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 24 )
region = Rect2( 114, 0, 114, 66 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 24 )
region = Rect2( 228, 0, 114, 66 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 24 )
region = Rect2( 342, 0, 114, 66 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 24 )
region = Rect2( 456, 0, 114, 66 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 24 )
region = Rect2( 570, 0, 114, 66 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 24 )
region = Rect2( 684, 0, 114, 66 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 24 )
region = Rect2( 798, 0, 114, 66 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 24 )
region = Rect2( 912, 0, 114, 66 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 80, 86 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 9 )
region = Rect2( 80, 0, 80, 86 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 9 )
region = Rect2( 160, 0, 80, 86 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 9 )
region = Rect2( 320, 0, 80, 86 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 9 )
region = Rect2( 400, 0, 80, 86 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 23 )
region = Rect2( 71, 0, 70, 86 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 23 )
region = Rect2( 1, 0, 70, 86 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 43, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 43, 0, 43, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 86, 0, 43, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 129, 0, 43, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 69, 65 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 69, 0, 69, 65 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 138, 0, 69, 65 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 207, 0, 69, 65 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 276, 0, 69, 65 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 345, 0, 69, 65 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 47, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 47, 0, 47, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 94, 0, 47, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 188, 0, 47, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 141, 0, 47, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 336, 0, 48, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 53 ), ExtResource( 12 ), ExtResource( 7 ) ],
"loop": false,
"name": "attack",
"speed": 35.0
}, {
"frames": [ ExtResource( 10 ), SubResource( 54 ), ExtResource( 6 ) ],
"loop": true,
"name": "attack 1",
"speed": 35.0
}, {
"frames": [ SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ) ],
"loop": true,
"name": "attackdown",
"speed": 45.0
}, {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ) ],
"loop": true,
"name": "attackup",
"speed": 45.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ) ],
"loop": true,
"name": "dash",
"speed": 40.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 31 ), SubResource( 32 ), SubResource( 32 ) ],
"loop": false,
"name": "dead",
"speed": 3.0
}, {
"frames": [ SubResource( 35 ), SubResource( 34 ), SubResource( 35 ), SubResource( 34 ), SubResource( 35 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": false,
"name": "hurt",
"speed": 16.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 3.5
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 17 ), SubResource( 17 ), SubResource( 17 ), SubResource( 18 ), SubResource( 18 ), SubResource( 19 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "jump",
"speed": 11.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 24 ), SubResource( 24 ), SubResource( 23 ), SubResource( 22 ), SubResource( 25 ), SubResource( 26 ), SubResource( 26 ), SubResource( 26 ), SubResource( 26 ), SubResource( 25 ), SubResource( 22 ) ],
"loop": true,
"name": "rest",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 16, 33 )

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 32.625, 24.5 )

[sub_resource type="RectangleShape2D" id=59]
extents = Vector2( 24, 19.5625 )

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 18, 26 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 25 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 25 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 25 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 25 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 25 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=52]
animations = [ {
"frames": [ null, SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), null ],
"loop": false,
"name": "default",
"speed": 32.0
}, {
"frames": [ null, null ],
"loop": true,
"name": "inter",
"speed": 50.0
} ]

[node name="KinematicBody2D" type="KinematicBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -3, 15 )
scale = Vector2( 1, 0.6 )
shape = SubResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 65 )
use_parent_material = true
position = Vector2( 0, 2 )
scale = Vector2( 1, 0.95 )
frames = SubResource( 5 )
animation = "idle"

[node name="TimerRest" type="Timer" parent="."]

[node name="TimerAtack" type="Timer" parent="."]

[node name="cooldown" type="Timer" parent="."]

[node name="rest" type="Area2D" parent="."]
collision_layer = 10
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="rest"]
position = Vector2( -2, 1 )
shape = SubResource( 21 )

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = -12.322

[node name="attack_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -18.0
pitch_scale = 1.21

[node name="heartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
volume_db = -80.0
pitch_scale = 1.07
autoplay = true

[node name="jump1_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -13.987
pitch_scale = 1.03

[node name="jump2_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -10.394

[node name="attack_sound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -17.126
pitch_scale = 1.03

[node name="rest_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -14.0

[node name="dash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 31 )
volume_db = -13.351
pitch_scale = 1.83

[node name="dragonslayer_desert_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -29.0
pitch_scale = 0.95

[node name="path_of_exile_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
pitch_scale = 1.05

[node name="frostveil_Shrine_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -12.0

[node name="crimson_Abyss_Forge_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -21.0

[node name="Cursed_Abyssal_Reef_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -14.0
pitch_scale = 0.67

[node name="Area2D" type="StaticBody2D" parent="." groups=["hit"]]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 50.375, -6.5 )
shape = SubResource( 33 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2, -44 )
shape = SubResource( 59 )
disabled = true

[node name="Area2D3" type="StaticBody2D" parent="." groups=["hitDown"]]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( -3, 51.4375 )
shape = SubResource( 59 )
disabled = true

[node name="deadAnim" type="Timer" parent="."]

[node name="deadeffect" type="Timer" parent="."]

[node name="deadtp" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 6 )
shape = SubResource( 36 )

[node name="FinalBos" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -30.588

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
scale = Vector2( 1.15, 1.15 )
frames = SubResource( 52 )

[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="rest" to="." method="_on_rest_body_entered"]
[connection signal="body_exited" from="rest" to="." method="_on_rest_body_exited"]
